--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 </tbody>
             </table>
         </div>
+	<!-- Add notice below tables -->
+        <div class="notice">
+            <p>⏰ All games must be played within 72 hours of scheduled time</p>
+        </div>
+        
+        <!-- Add rules link button -->
+        <div class="rules-link">
+            <button onclick="window.location.href='rules.html'">📜 View Competition Rules</button>
+        </div>
     </main>
 
     <footer>
