--- a/rules.html
+++ b/rules.html
@@ -27,7 +27,7 @@
         <section class="rules-section">
             <h2>⚽ Match Rules</h2>
             <ul>
-                <li>Game mode: Ultimate Team (or agreed alternative)</li>
+                <li>Game mode: Ultimate Team (Max Team Rating - 90)</li>
                 <li>Half length: 6 minutes</li>
                 <li>Difficulty: World Class</li>
                 <li>Controls: Any</li>
