--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="tabs">
             <button class="tab-button active" onclick="showTab('first-leg')">First Leg</button>
             <button class="tab-button" onclick="showTab('second-leg')">Second Leg</button>
-	    <button class="tab-button" onclick="showTab('dashboard')">League Dashboard</button>
+	    <button class="tab-button" onclick="window.location.href='table.html'">League Table</button>
         </div>
     </header>
 
