--- a/table.html
+++ b/table.html
@@ -15,7 +15,7 @@
 
     <main>
         <div class="league-table-container">
-            <table class="league-table">
+            <table class="league-table" id="league-table">
                 <thead>
                     <tr>
                         <th>Pos</th>
