--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <footer>
         <p>© 2024 EAFC25 Tournament. All rights reserved.</p>
     </footer>
-
+	
+    <script src="table.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
