--- a/table.html
+++ b/table.html
@@ -42,6 +42,7 @@
         <p>© 2024 EAFC25 Tournament. All rights reserved.</p>
     </footer>
 
+    <script src="script.js"></script>
     <script src="table.js"></script>
 </body>
 </html>
