--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>EAFC25 League Standings</h1>
-        <button class="back-button" onclick="window.history.back()">← Back to Fixtures</button>
+        <button class="back-button" onclick="window.location.href='index.html'">← Back to Fixtures</button>
     </header>
 
     <main>
